Adding activation details for Medusa, Giant, Wendigo, Bandit, FireImp, VolucrixReaver.

--- a/content/D2E/boxed/lor/monsters.ini
+++ b/content/D2E/boxed/lor/monsters.ini
@@ -11,8 +11,7 @@ name="Volucrix Reaver"
 image="../../ffg/img/Monster_VolucrixReaver.dds"
 info={ffg:INSTRUCTION_VOLUCRIX_REAVER}
 traits=melee building mountain small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterCarrionDrake]
 name="Carrion Drake"
