--- a/content/D2E/boxed/lotw/monsters.ini
+++ b/content/D2E/boxed/lotw/monsters.ini
@@ -3,8 +3,7 @@ name="Fire Imp"
 image="../../ffg/img/Monster_FireImps.dds"
 info={ffg:INSTRUCTION_FIRE_IMP}
 traits=ranged hot cursed small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterHybridSentinel]
 name="Hybrid Sentinel"
