--- a/content/D2E/ck/d1e/activations.ini
+++ b/content/D2E/ck/d1e/activations.ini
@@ -52,23 +52,23 @@ minion={ffg:BANE_SPIDER_3_MINION_0}
 master={ffg:BANE_SPIDER_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationGiant1]
 ability={ffg:EFFECT_GIANT_1}
 minion={ffg:GIANT_1_MINION_0}
 master={ffg:GIANT_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationGiant2]
 ability={ffg:EFFECT_GIANT_2}
 minion={ffg:GIANT_2_MINION_0}
 master={ffg:GIANT_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationGiant3]
 ability={ffg:EFFECT_GIANT_3}
 minion={ffg:GIANT_3_MINION_0}
 master={ffg:GIANT_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationSorcerer1]
