--- a/content/D2E/ck/d1e/monsters.ini
+++ b/content/D2E/ck/d1e/monsters.ini
@@ -27,8 +27,7 @@ activation=Range1 Range2 Range3
 image="../../ffg/img/Monster_Giant.dds"
 info={ffg:INSTRUCTION_GIANTS}
 traits=melee mountain wilderness huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterSorcerer]
 ; name=""
