--- a/content/D2E/ck/toi/activations.ini
+++ b/content/D2E/ck/toi/activations.ini
@@ -52,38 +52,38 @@ ability={ffg:EFFECT_LAVA_BEETLE_3}
 minion={ffg:LAVA_BEETLE_3_MINION_0}
 master={ffg:LAVA_BEETLE_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationMedusa1]
 ability={ffg:EFFECT_MEDUSA_1}
 minion={ffg:MEDUSA_1_MINION_0}
 master={ffg:MEDUSA_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationMedusa2]
 ability={ffg:EFFECT_MEDUSA_2}
 minion={ffg:MEDUSA_2_MINION_0}
 master={ffg:MEDUSA_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationMedusa3]
 ability={ffg:EFFECT_MEDUSA_3}
 minion={ffg:MEDUSA_3_MINION_0}
 master={ffg:MEDUSA_3_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationWendigo1]
 ability={ffg:EFFECT_WENDIGO_1}
 minion={ffg:WENDIGO_1_MINION_0}
 master={ffg:WENDIGO_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationWendigo2]
 ability={ffg:EFFECT_WENDIGO_2}
 minion={ffg:WENDIGO_2_MINION_0}
 master={ffg:WENDIGO_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationWendigo3]
 ability={ffg:EFFECT_WENDIGO_3}
 minion={ffg:WENDIGO_3_MINION_0}
 master={ffg:WENDIGO_3_MASTER_0}
+masterfirst=true
