--- a/content/D2E/ck/toi/monsters.ini
+++ b/content/D2E/ck/toi/monsters.ini
@@ -28,13 +28,11 @@ traits=ranged cave hot small
 image="../../ffg/img/Monster_Medusa.dds"
 info={ffg:INSTRUCTION_MEDUSA}
 traits=ranged building cursed small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterWendigo]
 ; name=""
 image="../../ffg/img/Monster_Wendigo.dds"
 info={ffg:INSTRUCTION_WENDIGO}
 traits=melee cold cave medium
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
