--- a/content/D2E/h&m/cotf/monsters.ini
+++ b/content/D2E/h&m/cotf/monsters.ini
@@ -11,8 +11,7 @@ traits=melee mountain building huge
 image="../../ffg/img/Monster_Medusa.dds"
 info={ffg:INSTRUCTION_MEDUSA}
 traits=ranged building cursed small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterSorcerer]
 ; name=""
