--- a/content/D2E/boxed/lor/activations.ini
+++ b/content/D2E/boxed/lor/activations.ini
@@ -16,23 +16,23 @@ ability={ffg:EFFECT_GOBLIN_WITCHER_3}
 minion={ffg:GOBLIN_WITCHER_3_MINION_0}
 master={ffg:GOBLIN_WITCHER_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationVolucrixReaver1]
 ability={ffg:EFFECT_VOLUCRIX_REAVER_1}
 minion={ffg:VOLUCRIX_REAVER_1_MINION_0}
 master={ffg:VOLUCRIX_REAVER_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationVolucrixReaver2]
 ability={ffg:EFFECT_VOLUCRIX_REAVER_2}
 minion={ffg:VOLUCRIX_REAVER_2_MINION_0}
 master={ffg:VOLUCRIX_REAVER_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationVolucrixReaver3]
 ability={ffg:EFFECT_VOLUCRIX_REAVER_3}
 minion={ffg:VOLUCRIX_REAVER_3_MINION_0}
 master={ffg:VOLUCRIX_REAVER_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationCarrionDrake1]
