--- a/content/D2E/boxed/mob/activations.ini
+++ b/content/D2E/boxed/mob/activations.ini
@@ -52,11 +52,11 @@ ability={ffg:EFFECT_BROODWALKER_3}
 minion={ffg:BROODWALKER_3_MINION_0}
 master={ffg:BROODWALKER_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationFireImp4]
 ability={ffg:EFFECT_FIRE_IMPS_4}
 minion={ffg:FIRE_IMPS_4_MINION_0}
 master={ffg:FIRE_IMPS_4_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationRatSwarm4]
