--- a/content/D2E/boxed/mor/activations.ini
+++ b/content/D2E/boxed/mor/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationBandit1]
 ability={ffg:EFFECT_BANDIT_1}
 minion={ffg:BANDIT_1_MINION_0}
 master={ffg:BANDIT_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationBandit2]
 ability={ffg:EFFECT_BANDIT_2}
 minion={ffg:BANDIT_2_MINION_0}
 master={ffg:BANDIT_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBandit3]
 ability={ffg:EFFECT_BANDIT_3}
 minion={ffg:BANDIT_3_MINION_0}
 master={ffg:BANDIT_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationWraith1]
 ability={ffg:EFFECT_WRAITH_1}
