--- a/content/D2E/boxed/mor/monsters.ini
+++ b/content/D2E/boxed/mor/monsters.ini
@@ -3,8 +3,7 @@
 image="../../ffg/img/Monster_Bandit.dds"
 info={ffg:INSTRUCTION_BANDIT}
 traits=ranged wilderness building small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterWraith]
 ; name=""
