--- a/content/D2E/boxed/son/activations.ini
+++ b/content/D2E/boxed/son/activations.ini
@@ -70,11 +70,11 @@ master={ffg:YNFERNAEL_HULK_3_MASTER_0}
 ;minion={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MINION_0}
 ;master={ffg:SHAMBLING_COLOSSUS_NEREKHALL_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationVolucrixReaver4]
 ability={ffg:EFFECT_VOLUCRIX_REAVER_4}
 minion={ffg:VOLUCRIX_REAVER_4_MINION_0}
 master={ffg:VOLUCRIX_REAVER_4_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationSkeletonArcher4]
