--- a/content/D2E/boxed/tctr/activations.ini
+++ b/content/D2E/boxed/tctr/activations.ini
@@ -58,11 +58,11 @@ minion={ffg:SHAMBLING_COLOSSUS_3_MINION_0}
 master={ffg:SHAMBLING_COLOSSUS_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationFireImp4]
 ability={ffg:EFFECT_FIRE_IMPS_4}
 minion={ffg:FIRE_IMPS_4_MINION_0}
 master={ffg:FIRE_IMPS_4_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationRatSwarm4]
