--- a/content/D2E/h&m/cod/activations.ini
+++ b/content/D2E/h&m/cod/activations.ini
@@ -16,23 +16,23 @@ ability={ffg:EFFECT_LAVA_BEETLE_3}
 minion={ffg:LAVA_BEETLE_3_MINION_0}
 master={ffg:LAVA_BEETLE_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationGiant1]
 ability={ffg:EFFECT_GIANT_1}
 minion={ffg:GIANT_1_MINION_0}
 master={ffg:GIANT_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationGiant2]
 ability={ffg:EFFECT_GIANT_2}
 minion={ffg:GIANT_2_MINION_0}
 master={ffg:GIANT_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationGiant3]
 ability={ffg:EFFECT_GIANT_3}
 minion={ffg:GIANT_3_MINION_0}
 master={ffg:GIANT_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationChaosBeast1]
