--- a/content/D2E/h&m/cod/monsters.ini
+++ b/content/D2E/h&m/cod/monsters.ini
@@ -3,8 +3,7 @@
 image="../../ffg/img/Monster_Giant.dds"
 info={ffg:INSTRUCTION_GIANTS}
 traits=melee mountain wilderness huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterChaosBeast]
 name="Chaos Beast"
