--- a/content/D2E/h&m/cotf/activations.ini
+++ b/content/D2E/h&m/cotf/activations.ini
@@ -16,23 +16,23 @@ ability={ffg:EFFECT_GOLEM_3}
 minion={ffg:GOLEM_3_MINION_0}
 master={ffg:GOLEM_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationMedusa1]
 ability={ffg:EFFECT_MEDUSA_1}
 minion={ffg:MEDUSA_1_MINION_0}
 master={ffg:MEDUSA_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationMedusa2]
 ability={ffg:EFFECT_MEDUSA_2}
 minion={ffg:MEDUSA_2_MINION_0}
 master={ffg:MEDUSA_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationMedusa3]
 ability={ffg:EFFECT_MEDUSA_3}
 minion={ffg:MEDUSA_3_MINION_0}
 master={ffg:MEDUSA_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationSorcerer1]
