--- a/content/D2E/h&m/god/activations.ini
+++ b/content/D2E/h&m/god/activations.ini
@@ -34,20 +34,20 @@ minion={ffg:DARK_PRIEST_3_MINION_0}
 master={ffg:DARK_PRIEST_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationWendigo1]
 ability={ffg:EFFECT_WENDIGO_1}
 minion={ffg:WENDIGO_1_MINION_0}
 master={ffg:WENDIGO_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationWendigo2]
 ability={ffg:EFFECT_WENDIGO_2}
 minion={ffg:WENDIGO_2_MINION_0}
 master={ffg:WENDIGO_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationWendigo3]
 ability={ffg:EFFECT_WENDIGO_3}
 minion={ffg:WENDIGO_3_MINION_0}
 master={ffg:WENDIGO_3_MASTER_0}
+masterfirst=true
