--- a/content/D2E/h&m/god/monsters.ini
+++ b/content/D2E/h&m/god/monsters.ini
@@ -19,6 +19,5 @@ activation=Range1 Range2 Range3
 image="../../ffg/img/Monster_Wendigo.dds"
 info={ffg:INSTRUCTION_WENDIGO}
 traits=melee cold cave huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
