Adding activation details for Bone Horror, MarrowPriest, Troll, Crow Hag.

--- a/content/D2E/boxed/tctr/activations.ini
+++ b/content/D2E/boxed/tctr/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationMarrowPriest1]
 ability={ffg:EFFECT_MARROW_PRIEST_1}
 minion={ffg:MARROW_PRIEST_1_MINION_0}
 master={ffg:MARROW_PRIEST_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationMarrowPriest2]
 ability={ffg:EFFECT_MARROW_PRIEST_2}
 minion={ffg:MARROW_PRIEST_2_MINION_0}
 master={ffg:MARROW_PRIEST_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationMarrowPriest3]
 ability={ffg:EFFECT_MARROW_PRIEST_3}
 minion={ffg:MARROW_PRIEST_3_MINION_0}
 master={ffg:MARROW_PRIEST_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationTheDispossessed1]
 ability={ffg:EFFECT_DISPOSSESSED_1}
