--- a/content/D2E/boxed/tctr/monsters.ini
+++ b/content/D2E/boxed/tctr/monsters.ini
@@ -3,8 +3,7 @@ name="Marrow Priest"
 image="../../ffg/img/Monster_MarrowPriest.dds"
 info={ffg:INSTRUCTION_MARROW_PRIEST}
 traits=ranged dark building small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterTheDispossessed]
 name="The Dispossessed"
