--- a/content/D2E/ck/aod/activations.ini
+++ b/content/D2E/ck/aod/activations.ini
@@ -34,23 +34,23 @@ minion={ffg:DARK_PRIEST_3_MINION_0}
 master={ffg:DARK_PRIEST_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationTroll1]
 ability="Each hero who suffers ≥ during an attack tests μ, if they fail they are Stunned."
 minion={ffg:TROLL_1_MINION_0}
 master={ffg:TROLL_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationTroll2]
 ability={ffg:EFFECT_TROLL_2}
 minion={ffg:TROLL_2_MINION_0}
 master={ffg:TROLL_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationTroll3]
 ability={ffg:EFFECT_TROLL_3}
 minion={ffg:TROLL_3_MINION_0}
 master={ffg:TROLL_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationDeepElf1]
