--- a/content/D2E/ck/aod/monsters.ini
+++ b/content/D2E/ck/aod/monsters.ini
@@ -18,8 +18,7 @@ activation=Range1 Range2 Range3
 image="../../ffg/img/Monster_Troll.dds"
 info="No additional instructions."
 traits=melee mountain cave huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterDeepElf]
 ; name=""
