--- a/content/D2E/ck/d1e/activations.ini
+++ b/content/D2E/ck/d1e/activations.ini
@@ -142,23 +142,23 @@ ability="Each hero in line of sight of an Ogre immediately tests Ï€, adding 1 â‰
 minion={ffg:OGRE_3_MINION_0}
 master={ffg:OGRE_3_MINION_0}
 
-; fixme minion first?
 [MonsterActivationHellhound1]
 ability={ffg:EFFECT_HELLHOUND_1}
 minion={ffg:HELLHOUND_1_MINION_0}
 master={ffg:HELLHOUND_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationHellhound2]
 ability={ffg:EFFECT_HELLHOUND_2}
 minion={ffg:HELLHOUND_2_MINION_0}
 master={ffg:HELLHOUND_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationHellhound3]
 ability={ffg:EFFECT_HELLHOUND_3}
 minion={ffg:HELLHOUND_3_MINION_0}
 master={ffg:HELLHOUND_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationSkeletonArcher1]
