--- a/content/D2E/h&m/botw/activations.ini
+++ b/content/D2E/h&m/botw/activations.ini
@@ -26,23 +26,23 @@ minion={ffg:KOBOLD_4_MINION_0}
 master={ffg:KOBOLD_4_MASTER_0}
 priority=1
 
-; fixme minion first?
 [MonsterActivationHellhound1]
 ability={ffg:EFFECT_HELLHOUND_1}
 minion={ffg:HELLHOUND_1_MINION_0}
 master={ffg:HELLHOUND_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationHellhound2]
 ability={ffg:EFFECT_HELLHOUND_2}
 minion={ffg:HELLHOUND_2_MINION_0}
 master={ffg:HELLHOUND_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationHellhound3]
 ability={ffg:EFFECT_HELLHOUND_3}
 minion={ffg:HELLHOUND_3_MINION_0}
 master={ffg:HELLHOUND_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationDeepElf1]
