--- a/content/D2E/h&m/toc/activations.ini
+++ b/content/D2E/h&m/toc/activations.ini
@@ -16,23 +16,24 @@ ability={ffg:EFFECT_SKELETON_ARCHER_3}
 minion={ffg:SKELETON_ARCHER_3_MINION_0}
 master={ffg:SKELETON_ARCHER_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationCrowHag1]
 ability={ffg:EFFECT_CROW_HAG_1}
 minion={ffg:CROW_HAG_1_MINION_0}
 master={ffg:CROW_HAG_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationCrowHag2]
 ability={ffg:EFFECT_CROW_HAG_2}
 minion={ffg:CROW_HAG_2_MINION_0}
 master={ffg:CROW_HAG_2_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationCrowHag3]
 ability={ffg:EFFECT_CROW_HAG_31}
 minion={ffg:CROW_HAG_3_MINION_0}
 master={ffg:CROW_HAG_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationDemonLord1]
