--- a/content/D2E/h&m/toc/monsters.ini
+++ b/content/D2E/h&m/toc/monsters.ini
@@ -11,8 +11,7 @@ name="Crow Hag"
 image="../../ffg/img/Monster_CrowHag.dds"
 info={ffg:INSTRUCTION_CROW_HAG}
 traits=ranged dark civilized small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterDemonLord]
 name="Demon Lord"
