--- a/content/D2E/h&m/vod/monsters.ini
+++ b/content/D2E/h&m/vod/monsters.ini
@@ -22,6 +22,5 @@ priority=1
 image="../../ffg/img/Monster_Troll.dds"
 info={ffg:INSTRUCTION_TROLL}
 traits=melee mountain cave huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 priority=1
