--- a/content/D2E/boxed/lotw/activations.ini
+++ b/content/D2E/boxed/lotw/activations.ini
@@ -53,8 +53,8 @@ ability={ffg:EFFECT_LAVA_BEETLE_4}
 minion={ffg:LAVA_BEETLE_4_MINION_0}
 master={ffg:LAVA_BEETLE_4_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationHellhound4]
 ability={ffg:EFFECT_HELLHOUND_4}
 minion={ffg:HELLHOUND_4_MINION_0}
 master={ffg:HELLHOUND_4_MASTER_0}
+minionfirst=true
