--- a/content/D2E/boxed/mob/activations.ini
+++ b/content/D2E/boxed/mob/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationBoneHorror1]
 ability={ffg:EFFECT_BONE_HORROR_1}
 minion={ffg:BONE_HORROR_1_MINION_0}
 master={ffg:BONE_HORROR_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBoneHorror2]
 ability={ffg:EFFECT_BONE_HORROR_2}
 minion={ffg:BONE_HORROR_2_MINION_0}
 master={ffg:BONE_HORROR_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBoneHorror3]
 ability={ffg:EFFECT_BONE_HORROR_3}
 minion={ffg:BONE_HORROR_3_MINION_0}
 master={ffg:BONE_HORROR_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationReanimate1]
