--- a/content/D2E/boxed/mob/monsters.ini
+++ b/content/D2E/boxed/mob/monsters.ini
@@ -3,8 +3,7 @@ name="Bone Horror"
 image="../../ffg/img/Monster_BoneHorror.dds"
 info={ffg:INSTRUCTION_BONE_HORROR}
 traits=melee cursed cave small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range2 Range3
 
 [MonsterReanimate]
 ; name=""
