Activation details for Skeleton Archer, Naga, Razorwing, Lava Beetle, Hellhound, Manticore, Ironbound, Ynfaernal Hulk.

--- a/content/D2E/boxed/son/monsters.ini
+++ b/content/D2E/boxed/son/monsters.ini
@@ -20,13 +20,11 @@ traits=melee civilized cursed small
 image="../../ffg/img/Monster_Ironbound.dds"
 info={ffg:INSTRUCTION_IRONBOUND}
 traits=melee civilized building small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterYnfernaelHulk]
 name="Ynfernael Hulk"
 image="../../ffg/img/Monster_YnfearnalHulk.dds"
 info={ffg:INSTRUCTION_YNFERNAEL_HULK}
 traits=melee cursed hot huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
