--- a/content/D2E/ck/d1e/activations.ini
+++ b/content/D2E/ck/d1e/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationRazorwing1]
 ability={ffg:EFFECT_RAZORWING_1}
 minion={ffg:RAZORWING_1_MINION_0}
 master={ffg:RAZORWING_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationRazorwing2]
 ability={ffg:EFFECT_RAZORWING_2}
 minion={ffg:RAZORWING_2_MINION_0}
 master={ffg:RAZORWING_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationRazorwing3]
 ability={ffg:EFFECT_RAZORWING_3}
 minion={ffg:RAZORWING_3_MINION_0}
 master={ffg:RAZORWING_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationBeastmen1]
@@ -106,23 +106,23 @@ ability={ffg:EFFECT_CRYPT_DRAGON_3}
 minion={ffg:CRYPT_DRAGON_3_MINION_0}
 master={ffg:CRYPT_DRAGON_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationManticore1]
 ability={ffg:EFFECT_MANTICORE_1}
 minion={ffg:MANTICORE_1_MINION_0}
 master={ffg:MANTICORE_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationManticore2]
 ability={ffg:EFFECT_MANTICORE_2}
 minion={ffg:MANTICORE_2_MINION_0}
 master={ffg:MANTICORE_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationManticore3]
 ability={ffg:EFFECT_MANTICORE_3}
 minion={ffg:MANTICORE_3_MINION_0}
 master={ffg:MANTICORE_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationOgre1]
@@ -160,23 +160,23 @@ minion={ffg:HELLHOUND_3_MINION_0}
 master={ffg:HELLHOUND_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationSkeletonArcher1]
 ability={ffg:EFFECT_SKELETON_ARCHER_1}
 minion={ffg:SKELETON_ARCHER_1_MINION_0}
 master={ffg:SKELETON_ARCHER_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationSkeletonArcher2]
 ability={ffg:EFFECT_SKELETON_ARCHER_2}
 minion={ffg:SKELETON_ARCHER_2_MINION_0}
 master={ffg:SKELETON_ARCHER_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationSkeletonArcher3]
 ability={ffg:EFFECT_SKELETON_ARCHER_3}
 minion={ffg:SKELETON_ARCHER_3_MINION_0}
 master={ffg:SKELETON_ARCHER_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationDemonLord1]
@@ -196,20 +196,20 @@ ability={ffg:EFFECT_DEMON_LORD_3}
 minion={ffg:DEMON_LORD_3_MINION_0}
 master={ffg:DEMON_LORD_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationNaga1]
 ability={ffg:EFFECT_NAGA_1}
 minion={ffg:NAGA_1_MINION_0}
 master="∞ Use ""Grab"" on the closest hero.\n∞ Spot the closest hero.\n∞ Attack the closest hero."
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationNaga2]
 ability={ffg:EFFECT_NAGA_2}
 minion={ffg:NAGA_2_MINION_0}
 master={ffg:NAGA_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationNaga3]
 ability={ffg:EFFECT_NAGA_3}
 minion={ffg:NAGA_3_MINION_0}
 master="∞ Use ""Grab"" on the closest hero.\n∞ Spot the closest hero.\n∞ Attack the closest hero.\n∞ If within 2 spaces of a hero, perform a move action and retreat."
+minionfirst=true
