--- a/content/D2E/ck/d1e/monsters.ini
+++ b/content/D2E/ck/d1e/monsters.ini
@@ -3,8 +3,7 @@
 image="../../ffg/img/Monster_Razorwing.dds"
 info={ffg:INSTRUCTION_RAZORWING}
 traits=melee wilderness cave small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterBeastmen]
 ; name=""
@@ -51,8 +50,7 @@ traits=ranged cursed dark massive
 image="../../ffg/img/Monster_Manticore.dds"
 info={ffg:INSTURCTION_MANTICORE}
 traits=ranged wilderness dark huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterOgre]
 ; name=""
@@ -68,16 +66,13 @@ image="../../ffg/img/Monster_Hellhound.dds"
 imageplace="../../ffg/img/Monster_Hellhound_Placement.dds"
 info="Master Hellhounds spend ± in the following order: \n±: Fire Breath (if at least 1 additional hero is affected) \n±: Pierce X (if the ≤ results are equal to or greater than X)\n\nMinion Hellhounds spend ± in the following order: \n±: Pierce X (if the ≤ results are equal to or greater than X)\n\nFire Breath: When tracing the path for Fire Breath, include as many heroes as possible without tracing through monsters."
 traits=melee hot cursed medium
-; fixme unknown?
-;activation=Range1 Range2 Range3
 
 [MonsterSkeletonArcher]
 name="Skeleton Archer"
 image="../../ffg/img/Monster_SkeletonArcher.dds"
 info={ffg:INSTRUCTION_SKELETON_ARCHER}
 traits=ranged cursed civilized small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterDemonLord]
 name="Demon Lord"
@@ -92,5 +87,4 @@ traits=ranged cursed hot huge
 image="../../ffg/img/Monster_Naga.dds"
 info="Nagas spend ± in the following order: \n ±: Poison \n\nSorcery: Range and ≥ are converted so that the maximum ≥ is dealt."
 traits=ranged water cave huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
