--- a/content/D2E/ck/toi/activations.ini
+++ b/content/D2E/ck/toi/activations.ini
@@ -34,23 +34,23 @@ ability={ffg:EFFECT_SHADE_3}
 minion="∞ Engage the hero within 4 spaces of this monster with the lowest μ.\n∞ Engage the closest hero.\n∞ Attack the adjacent hero with the lowest μ.\n∞ If this monster has performed an attack this activation, it moves 2 spaces away from the closest hero."
 master="∞ Engage the hero within 3 spaces of this monster with the least Health remaining.\n∞ Engage the closest hero.\n∞ Attack the adjacent hero with the least Health remaining.\n∞ If this monster has performed an attack this activation, it moves 2 spaces away from the closest hero."
 
-; fixme minion first?
 [MonsterActivationLavaBeetle1]
 ability={ffg:EFFECT_LAVA_BEETLE_1}
 minion={ffg:LAVA_BEETLE_1_MINION_0}
 master={ffg:LAVA_BEETLE_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationLavaBeetle2]
 ability={ffg:EFFECT_LAVA_BEETLE_2}
 minion={ffg:LAVA_BEETLE_2_MINION_0}
 master={ffg:LAVA_BEETLE_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationLavaBeetle3]
 ability={ffg:EFFECT_LAVA_BEETLE_3}
 minion={ffg:LAVA_BEETLE_3_MINION_0}
 master={ffg:LAVA_BEETLE_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationMedusa1]
 ability={ffg:EFFECT_MEDUSA_1}
