--- a/content/D2E/h&m/cod/activations.ini
+++ b/content/D2E/h&m/cod/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationLavaBeetle1]
 ability={ffg:EFFECT_LAVA_BEETLE_1}
 minion={ffg:LAVA_BEETLE_1_MINION_0}
 master={ffg:LAVA_BEETLE_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationLavaBeetle2]
 ability={ffg:EFFECT_LAVA_BEETLE_2}
 minion={ffg:LAVA_BEETLE_2_MINION_0}
 master={ffg:LAVA_BEETLE_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationLavaBeetle3]
 ability={ffg:EFFECT_LAVA_BEETLE_3}
 minion={ffg:LAVA_BEETLE_3_MINION_0}
 master={ffg:LAVA_BEETLE_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationGiant1]
 ability={ffg:EFFECT_GIANT_1}
