--- a/content/D2E/h&m/ooto/activations.ini
+++ b/content/D2E/h&m/ooto/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationRazorwing1]
 ability={ffg:EFFECT_RAZORWING_1}
 minion={ffg:RAZORWING_1_MINION_0}
 master={ffg:RAZORWING_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationRazorwing2]
 ability={ffg:EFFECT_RAZORWING_2}
 minion={ffg:RAZORWING_2_MINION_0}
 master={ffg:RAZORWING_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationRazorwing3]
 ability={ffg:EFFECT_RAZORWING_3}
 minion={ffg:RAZORWING_3_MINION_0}
 master={ffg:RAZORWING_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationBeastmen1]
