--- a/content/D2E/h&m/ooto/monsters.ini
+++ b/content/D2E/h&m/ooto/monsters.ini
@@ -3,8 +3,7 @@
 image="../../ffg/img/Monster_Razorwing.dds"
 info={ffg:INSTRUCTION_RAZORWING}
 traits=melee wilderness cave small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterBeastmen]
 ; name=""
