--- a/content/D2E/h&m/toc/activations.ini
+++ b/content/D2E/h&m/toc/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationSkeletonArcher1]
 ability={ffg:EFFECT_SKELETON_ARCHER_1}
 minion={ffg:SKELETON_ARCHER_1_MINION_0}
 master={ffg:SKELETON_ARCHER_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationSkeletonArcher2]
 ability={ffg:EFFECT_SKELETON_ARCHER_2}
 minion={ffg:SKELETON_ARCHER_2_MINION_0}
 master={ffg:SKELETON_ARCHER_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationSkeletonArcher3]
 ability={ffg:EFFECT_SKELETON_ARCHER_3}
 minion={ffg:SKELETON_ARCHER_3_MINION_0}
 master={ffg:SKELETON_ARCHER_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationCrowHag1]
 ability={ffg:EFFECT_CROW_HAG_1}
