--- a/content/D2E/h&m/toc/monsters.ini
+++ b/content/D2E/h&m/toc/monsters.ini
@@ -3,8 +3,7 @@ name="Skeleton Archer"
 image="../../ffg/img/Monster_SkeletonArcher.dds"
 info={ffg:INSTRUCTION_SKELETON_ARCHER}
 traits=ranged cursed civilized small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterCrowHag]
 name="Crow Hag"
