--- a/content/D2E/h&m/vod/activations.ini
+++ b/content/D2E/h&m/vod/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationManticore1]
 ability={ffg:EFFECT_MANTICORE_1}
 minion={ffg:MANTICORE_1_MINION_0}
 master={ffg:MANTICORE_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationManticore2]
 ability={ffg:EFFECT_MANTICORE_2}
 minion={ffg:MANTICORE_2_MINION_0}
 master={ffg:MANTICORE_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationManticore3]
 ability={ffg:EFFECT_MANTICORE_3}
 minion={ffg:MANTICORE_3_MINION_0}
 master={ffg:MANTICORE_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationOgre1]
