--- a/content/D2E/ck/toi/monsters.ini
+++ b/content/D2E/ck/toi/monsters.ini
@@ -20,8 +20,7 @@ name="Lava Beetle"
 image="../../ffg/img/Monster_LavaBeetle.dds"
 info={ffg:INSTRUCTION_LAVA_BEETLE}
 traits=ranged cave hot small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterMedusa]
 ; name=""
