--- a/content/D2E/h&m/cod/monsters.ini
+++ b/content/D2E/h&m/cod/monsters.ini
@@ -18,5 +18,4 @@ name="Lava Beetle"
 image="../../ffg/img/Monster_LavaBeetle.dds"
 info={ffg:INSTRUCTION_LAVA_BEETLE}
 traits=ranged cave hot small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
