--- a/content/D2E/h&m/sots/activations.ini
+++ b/content/D2E/h&m/sots/activations.ini
@@ -37,23 +37,23 @@ ability={ffg:EFFECT_BLOOD_APE_3}
 minion={ffg:BLOOD_APE_3_MINION_0}
 master={ffg:BLOOD_APE_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationNaga1]
 ability={ffg:EFFECT_NAGA_1}
 minion={ffg:NAGA_1_MINION_0}
 master={ffg:NAGA_1_MASTER_0}
+masterfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationNaga2]
 ability={ffg:EFFECT_NAGA_2}
 minion={ffg:NAGA_2_MINION_0}
 master={ffg:NAGA_2_MASTER_0}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationNaga3]
 ability={ffg:EFFECT_NAGA_3}
 minion={ffg:NAGA_3_MINION_0}
 master={ffg:NAGA_3_MASTER_0}
+minionfirst=true
 priority=1
