--- a/content/D2E/h&m/sots/monsters.ini
+++ b/content/D2E/h&m/sots/monsters.ini
@@ -23,6 +23,5 @@ priority=1
 image="../../ffg/img/Monster_Naga.dds"
 info={ffg:INSTRUCTION_NAGA}
 traits=ranged water cave huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 priority=1
