--- a/content/D2E/h&m/vod/monsters.ini
+++ b/content/D2E/h&m/vod/monsters.ini
@@ -4,8 +4,7 @@ image="../../ffg/img/Monster_Manticore.dds"
 imageplace="../../ffg/img/Monster_Manticore_Placement.dds"
 info={ffg:INSTURCTION_MANTICORE}
 traits=ranged wilderness dark medium
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 priority=1
 
 [MonsterOgre]
