Improving activations for Shade, Beastman, Crypt Dragon, Demon Lord, Plague Worm, Hybrid Sentinel, Carrion Drake.

--- a/content/D2E/boxed/lor/activations.ini
+++ b/content/D2E/boxed/lor/activations.ini
@@ -34,23 +34,23 @@ minion={ffg:VOLUCRIX_REAVER_3_MINION_0}
 master={ffg:VOLUCRIX_REAVER_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationCarrionDrake1]
 ability={ffg:EFFECT_CARRION_DRAKE_1}
 minion={ffg:CARRION_DRAKE_1_MINION_0}
 master={ffg:CARRION_DRAKE_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationCarrionDrake2]
 ability={ffg:EFFECT_CARRION_DRAKE_2}
 minion={ffg:CARRION_DRAKE_2_MINION_0}
 master={ffg:CARRION_DRAKE_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationCarrionDrake3]
 ability={ffg:EFFECT_CARRION_DRAKE_3}
 minion={ffg:CARRION_DRAKE_3_MINION_0}
 master={ffg:CARRION_DRAKE_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationArachyura1]
 ability={ffg:EFFECT_ARACHYURA_1}
