--- a/content/D2E/boxed/lor/monsters.ini
+++ b/content/D2E/boxed/lor/monsters.ini
@@ -18,8 +18,7 @@ name="Carrion Drake"
 image="../../ffg/img/Monster_CarrionDrake.dds"
 info={ffg:INSTRUCTION_CARRION_DRAKE}
 traits=melee water dark small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterArachyura]
 ; name=""
