--- a/content/D2E/ck/d1e/activations.ini
+++ b/content/D2E/ck/d1e/activations.ini
@@ -16,23 +16,23 @@ minion={ffg:RAZORWING_3_MINION_0}
 master={ffg:RAZORWING_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBeastmen1]
 ability={ffg:EFFECT_BEASTMAN_1}
 minion={ffg:BEASTMAN_1_MINION_0}
 master={ffg:BEASTMAN_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBeastmen2]
 ability={ffg:EFFECT_BEASTMAN_2}
 minion={ffg:BEASTMAN_2_MINION_0}
 master={ffg:BEASTMAN_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBeastmen3]
 ability={ffg:EFFECT_BEASTMAN_3}
 minion={ffg:BEASTMAN_3_MINION_0}
 master={ffg:BEASTMAN_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationBaneSpider1]
 ability={ffg:EFFECT_BANE_SPIDER_1}
@@ -88,23 +88,23 @@ ability={ffg:EFFECT_SORCERER_3}
 minion={ffg:SORCERER_3_MINION_0}
 master={ffg:SORCERER_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationCryptDragon1]
 ability={ffg:EFFECT_CRYPT_DRAGON_1}
 minion={ffg:CRYPT_DRAGON_1_MINION_0}
 master={ffg:CRYPT_DRAGON_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationCryptDragon2]
 ability={ffg:EFFECT_CRYPT_DRAGON_2}
 minion={ffg:CRYPT_DRAGON_2_MINION_0}
 master={ffg:CRYPT_DRAGON_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationCryptDragon3]
 ability={ffg:EFFECT_CRYPT_DRAGON_3}
 minion={ffg:CRYPT_DRAGON_3_MINION_0}
 master={ffg:CRYPT_DRAGON_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationManticore1]
 ability={ffg:EFFECT_MANTICORE_1}
@@ -178,23 +178,23 @@ minion={ffg:SKELETON_ARCHER_3_MINION_0}
 master={ffg:SKELETON_ARCHER_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationDemonLord1]
 ability={ffg:EFFECT_DEMON_LORD_1}
 minion={ffg:DEMON_LORD_1_MINION_0}
 master={ffg:DEMON_LORD_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationDemonLord2]
 ability={ffg:EFFECT_DEMON_LORD_2}
 minion={ffg:DEMON_LORD_2_MINION_0}
 master={ffg:DEMON_LORD_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationDemonLord3]
 ability={ffg:EFFECT_DEMON_LORD_3}
 minion={ffg:DEMON_LORD_3_MINION_0}
 master={ffg:DEMON_LORD_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationNaga1]
 ability={ffg:EFFECT_NAGA_1}
