--- a/content/D2E/ck/d1e/monsters.ini
+++ b/content/D2E/ck/d1e/monsters.ini
@@ -10,8 +10,7 @@ activation=Skirmisher1 Skirmisher2 Skirmisher3
 image="../../ffg/img/Monster_Beastman.dds"
 info={ffg:INSTRUCTION_BEASTMAN}
 traits=melee wilderness mountain small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterBaneSpider]
 ; name=""
@@ -42,8 +41,7 @@ image="../../ffg/img/Monster_CryptDragon.dds"
 imageplace="../../ffg/img/Monster_CryptDragon_Placement.dds"
 info={ffg:INSTRUCTION_CRYPT_DRAGON}
 traits=ranged cursed dark massive
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterManticore]
 ; name=""
@@ -79,8 +77,7 @@ name="Demon Lord"
 image="../../ffg/img/Monster_DemonLord.dds"
 info={ffg:INSTRUCTION_DEMON_LORD}
 traits=ranged cursed hot huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterNaga]
 ; name=""
