--- a/content/D2E/ck/toi/monsters.ini
+++ b/content/D2E/ck/toi/monsters.ini
@@ -12,8 +12,7 @@ traits=melee cave cold massive
 image="No additional instructions."
 info={ffg:INSTRUCTION_SHADE}
 traits=melee cursed dark small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterLavaBeetle]
 name="Lava Beetle"
