--- a/content/D2E/h&m/ooto/monsters.ini
+++ b/content/D2E/h&m/ooto/monsters.ini
@@ -10,8 +10,7 @@ activation=Skirmisher1 Skirmisher2 Skirmisher3
 image="../../ffg/img/Monster_Beastman.dds"
 info={ffg:INSTRUCTION_BEASTMAN}
 traits=melee wilderness mountain small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterBaneSpider]
 ; name=""
