--- a/content/D2E/h&m/soe/monsters.ini
+++ b/content/D2E/h&m/soe/monsters.ini
@@ -22,6 +22,5 @@ priority=1
 image="../../ffg/img/Monster_Shade.dds"
 info={ffg:INSTRUCTION_SHADE}
 traits=melee cursed cold small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
