--- a/content/D2E/h&m/toc/monsters.ini
+++ b/content/D2E/h&m/toc/monsters.ini
@@ -17,5 +17,4 @@ name="Demon Lord"
 image="../../ffg/img/Monster_DemonLord.dds"
 info={ffg:INSTRUCTION_DEMON_LORD}
 traits=ranged cursed hot huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
