--- a/content/D2E/boxed/lotw/monsters.ini
+++ b/content/D2E/boxed/lotw/monsters.ini
@@ -10,5 +10,4 @@ name="Hybrid Sentinel"
 image="../../ffg/img/Monster_HybridSentinel.dds"
 info={ffg:INSTRUCTION_HYBRID_SENTINEL}
 traits=melee mountain cave small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
