--- a/content/D2E/boxed/tctr/activations.ini
+++ b/content/D2E/boxed/tctr/activations.ini
@@ -76,8 +76,8 @@ ability={ffg:EFFECT_ZOMBIE_6}
 minion={ffg:ZOMBIE_6_MINION_0}
 master={ffg:ZOMBIE_6_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationShade4]
 ability={ffg:EFFECT_SHADE_4}
 minion={ffg:SHADE_4_MINION}
 master={ffg:SHADE_4_MASTER}
+minionfirst=true
