--- a/content/D2E/boxed/tt/activations.ini
+++ b/content/D2E/boxed/tt/activations.ini
@@ -16,20 +16,20 @@ ability={ffg:EFFECT_HARPY_3}
 minion={ffg:HARPY_3_MINION_0}
 master={ffg:HARPY_3_MASTER_0}
 
-; fixme minion first?
 [MonsterActivationPlagueWorm1]
 ability={ffg:EFFECT_PLAGUE_WORM_1}
 minion={ffg:PLAGUE_WORM_1_MINION_0}
 master={ffg:PLAGUE_WORM_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationPlagueWorm2]
 ability={ffg:EFFECT_PLAGUE_WORM_2}
 minion={ffg:PLAGUE_WORM_2_MINION_0}
 master={ffg:PLAGUE_WORM_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationPlagueWorm3]
 ability={ffg:EFFECT_PLAGUE_WORM_3}
 minion={ffg:PLAGUE_WORM_3_MINION_0}
 master={ffg:PLAGUE_WORM_3_MASTER_0}
+minionfirst=true
