--- a/content/D2E/h&m/god/activations.ini
+++ b/content/D2E/h&m/god/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationCryptDragon1]
 ability={ffg:EFFECT_CRYPT_DRAGON_1}
 minion={ffg:CRYPT_DRAGON_1_MINION_0}
 master={ffg:CRYPT_DRAGON_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationCryptDragon2]
 ability={ffg:EFFECT_CRYPT_DRAGON_2}
 minion={ffg:CRYPT_DRAGON_2_MINION_0}
 master={ffg:CRYPT_DRAGON_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationCryptDragon3]
 ability={ffg:EFFECT_CRYPT_DRAGON_3}
 minion={ffg:CRYPT_DRAGON_3_MINION_0}
 master={ffg:CRYPT_DRAGON_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationDarkPriest1]
 ability={ffg:EFFECT_DARK_PRIEST_1}
