--- a/content/D2E/h&m/god/monsters.ini
+++ b/content/D2E/h&m/god/monsters.ini
@@ -4,8 +4,7 @@ image="../../ffg/img/Monster_CryptDragon.dds"
 imageplace="../../ffg/img/Monster_CryptDragon_Placement.dds"
 info={ffg:INSTRUCTION_CRYPT_DRAGON}
 traits=ranged cursed dark massive
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterDarkPriest]
 name="Dark Priest"
