--- a/content/D2E/h&m/ooto/activations.ini
+++ b/content/D2E/h&m/ooto/activations.ini
@@ -16,23 +16,23 @@ minion={ffg:RAZORWING_3_MINION_0}
 master={ffg:RAZORWING_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBeastmen1]
 ability={ffg:EFFECT_BEASTMAN_1}
 minion={ffg:BEASTMAN_1_MINION_0}
 master={ffg:BEASTMAN_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBeastmen2]
 ability={ffg:EFFECT_BEASTMAN_2}
 minion={ffg:BEASTMAN_2_MINION_0}
 master={ffg:BEASTMAN_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBeastmen3]
 ability={ffg:EFFECT_BEASTMAN_3}
 minion={ffg:BEASTMAN_3_MINION_0}
 master={ffg:BEASTMAN_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationBaneSpider1]
 ability={ffg:EFFECT_BANE_SPIDER_1}
