--- a/content/D2E/h&m/toc/activations.ini
+++ b/content/D2E/h&m/toc/activations.ini
@@ -35,20 +35,20 @@ minion={ffg:CROW_HAG_3_MINION_0}
 master={ffg:CROW_HAG_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationDemonLord1]
 ability={ffg:EFFECT_DEMON_LORD_1}
 minion={ffg:DEMON_LORD_1_MINION_0}
 master={ffg:DEMON_LORD_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationDemonLord2]
 ability={ffg:EFFECT_DEMON_LORD_2}
 minion={ffg:DEMON_LORD_2_MINION_0}
 master={ffg:DEMON_LORD_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationDemonLord3]
 ability={ffg:EFFECT_DEMON_LORD_3}
 minion={ffg:DEMON_LORD_3_MINION_0}
 master={ffg:DEMON_LORD_3_MASTER_0}
+masterfirst=true
