improving activations for zombie (activation6), Rat Swarm, Reanimate.

--- a/content/D2E/boxed/mob/monsters.ini
+++ b/content/D2E/boxed/mob/monsters.ini
@@ -10,8 +10,7 @@ activation=Range2 Range3
 image="../../ffg/img/Monster_Reanimate.dds"
 info={ffg:INSTRUCTION_REANIMATE}
 traits=melee cursed civilized small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterBroodwalker]
 ; name=""
