--- a/content/D2E/boxed/son/activations.ini
+++ b/content/D2E/boxed/son/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationRatSwarm1]
 ability={ffg:EFFECT_RAT_SWARM_1}
 minion={ffg:RAT_SWARM_1_MINION_0}
 master={ffg:RAT_SWARM_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationRatSwarm2]
 ability={ffg:EFFECT_RAT_SWARM_2}
 minion={ffg:RAT_SWARM_2_MINION_0}
 master={ffg:RAT_SWARM_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationRatSwarm3]
 ability={ffg:EFFECT_RAT_SWARM_3}
 minion={ffg:RAT_SWARM_3_MINION_0}
 master={ffg:RAT_SWARM_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationChangeling1]
