--- a/content/D2E/boxed/son/monsters.ini
+++ b/content/D2E/boxed/son/monsters.ini
@@ -3,8 +3,7 @@ name="Rat Swarm"
 image="../../ffg/img/Monster_RatSwarm.dds"
 info={ffg:INSTRUCTION_RAT_SWARM}
 traits=melee building dark medium
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 imageplace="../../ffg/img/Monster_RatSwarm_Placement.dds"
 
 [MonsterChangeling]
