--- a/content/D2E/boxed/mob/activations.ini
+++ b/content/D2E/boxed/mob/activations.ini
@@ -16,23 +16,23 @@ minion={ffg:BONE_HORROR_3_MINION_0}
 master={ffg:BONE_HORROR_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationReanimate1]
 ability={ffg:EFFECT_REANIMATE_1}
 minion={ffg:REANIMATE_1_MINION_0}
 master={ffg:REANIMATE_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationReanimate2]
 ability={ffg:EFFECT_REANIMATE_2}
 minion={ffg:REANIMATE_2_MINION_0}
 master={ffg:REANIMATE_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationReanimate3]
 ability={ffg:EFFECT_REANIMATE_3}
 minion={ffg:REANIMATE_3_MINION_0}
 master={ffg:REANIMATE_3_MASTER_0}
+minionfirst=true
 
 ; fixme minion first?
 [MonsterActivationBroodwalker1]
@@ -58,17 +58,17 @@ minion={ffg:FIRE_IMPS_4_MINION_0}
 master={ffg:FIRE_IMPS_4_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationRatSwarm4]
 ability={ffg:EFFECT_RAT_SWARM_4}
 minion={ffg:RAT_SWARM_4_MINION_0}
 master={ffg:RAT_SWARM_4_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationZombie6]
 ability={ffg:EFFECT_ZOMBIE_6}
 minion={ffg:ZOMBIE_6_MINION_0}
 master={ffg:ZOMBIE_6_MASTER_0}
+masterfirst=true
 
 [MonsterActivationShade4]
 ability={ffg:EFFECT_SHADE_4}
