--- a/content/D2E/boxed/tctr/activations.ini
+++ b/content/D2E/boxed/tctr/activations.ini
@@ -64,17 +64,17 @@ minion={ffg:FIRE_IMPS_4_MINION_0}
 master={ffg:FIRE_IMPS_4_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationRatSwarm4]
 ability={ffg:EFFECT_RAT_SWARM_4}
 minion={ffg:RAT_SWARM_4_MINION_0}
 master={ffg:RAT_SWARM_4_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationZombie6]
 ability={ffg:EFFECT_ZOMBIE_6}
 minion={ffg:ZOMBIE_6_MINION_0}
 master={ffg:ZOMBIE_6_MASTER_0}
+masterfirst=true
 
 [MonsterActivationShade4]
 ability={ffg:EFFECT_SHADE_4}
