Improving activations for Broodwalker, Blood Ape, Sorcerer, Golem.

--- a/content/D2E/boxed/mob/activations.ini
+++ b/content/D2E/boxed/mob/activations.ini
@@ -34,23 +34,23 @@ minion={ffg:REANIMATE_3_MINION_0}
 master={ffg:REANIMATE_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationBroodwalker1]
 ability={ffg:EFFECT_BROODWALKER_1}
 minion={ffg:BROODWALKER_1_MINION_0}
 master={ffg:BROODWALKER_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationBroodwalker2]
 ability={ffg:EFFECT_BROODWALKER_2}
 minion={ffg:BROODWALKER_2_MINION_0}
 master={ffg:BROODWALKER_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationBroodwalker3]
 ability={ffg:EFFECT_BROODWALKER_3}
 minion={ffg:BROODWALKER_3_MINION_0}
 master={ffg:BROODWALKER_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationFireImp4]
 ability={ffg:EFFECT_FIRE_IMPS_4}
