--- a/content/D2E/boxed/mob/monsters.ini
+++ b/content/D2E/boxed/mob/monsters.ini
@@ -17,5 +17,4 @@ activation=Brawler1 Brawler2 Brawler3
 image="../../ffg/img/Monster_Broodwalker.dds"
 info={ffg:INSTRUCTION_BROODWALKER}
 traits=melee dark building small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
