--- a/content/D2E/ck/aod/monsters.ini
+++ b/content/D2E/ck/aod/monsters.ini
@@ -35,5 +35,4 @@ image="../../ffg/img/Monster_BloodApe.dds"
 ; imageplace="../../ffg/img/Monster_BloodApe_Placement.dds"
 info={ffg:INSTRUCTION_BLOOD_APE}
 traits=melee hot cave medium
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
