--- a/content/D2E/ck/d1e/activations.ini
+++ b/content/D2E/ck/d1e/activations.ini
@@ -70,23 +70,23 @@ minion={ffg:GIANT_3_MINION_0}
 master={ffg:GIANT_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationSorcerer1]
 ability={ffg:EFFECT_SORCERER_1}
 minion={ffg:SORCERER_1_MINION_0}
 master={ffg:SORCERER_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationSorcerer2]
 ability={ffg:EFFECT_SORCERER_2}
 minion={ffg:SORCERER_2_MINION_0}
 master={ffg:SORCERER_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationSorcerer3]
 ability={ffg:EFFECT_SORCERER_3}
 minion={ffg:SORCERER_3_MINION_0}
 master={ffg:SORCERER_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationCryptDragon1]
 ability={ffg:EFFECT_CRYPT_DRAGON_1}
