--- a/content/D2E/ck/d1e/monsters.ini
+++ b/content/D2E/ck/d1e/monsters.ini
@@ -32,8 +32,7 @@ activation=Brawler1 Brawler2 Brawler3
 image="../../ffg/img/Monster_Sorcerer.dds"
 info="Sorcery: Range and ≥ are converted so that the maximum ≥ is dealt."
 traits=ranged civilized building small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2
 
 [MonsterCryptDragon]
 name="Crypt Dragon"
