--- a/content/D2E/h&m/cotf/monsters.ini
+++ b/content/D2E/h&m/cotf/monsters.ini
@@ -3,8 +3,7 @@
 image="../../ffg/img/Monster_Golem.dds"
 info={ffg:INSTRUCTION_GOLEM}
 traits=melee mountain building huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterMedusa]
 ; name=""
@@ -18,6 +17,5 @@ activation=Range1 Range2 Range3
 image="../../ffg/img/Monster_Sorcerer.dds"
 info={ffg:INSTRUCTION_SORCERER}
 traits=ranged civilized building small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2
 priority=1
