--- a/content/D2E/h&m/sots/activations.ini
+++ b/content/D2E/h&m/sots/activations.ini
@@ -19,23 +19,23 @@ minion={ffg:FERROX_3_MINION_0}
 master={ffg:FERROX_3_MASTER_0}
 priority=1
 
-; fixme minion first?
 [MonsterActivationBloodApe1]
 ability={ffg:EFFECT_BLOOD_APE_1}
 minion={ffg:BLOOD_APE_1_MINION_0}
 master={ffg:BLOOD_APE_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationBloodApe2]
 ability={ffg:EFFECT_BLOOD_APE_2}
 minion={ffg:BLOOD_APE_2_MINION_0}
 master={ffg:BLOOD_APE_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationBloodApe3]
 ability={ffg:EFFECT_BLOOD_APE_3}
 minion={ffg:BLOOD_APE_3_MINION_0}
 master={ffg:BLOOD_APE_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationNaga1]
 ability={ffg:EFFECT_NAGA_1}
