--- a/content/D2E/ck/wod/activations.ini
+++ b/content/D2E/ck/wod/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationGolem1]
 ability={ffg:EFFECT_GOLEM_1}
 minion={ffg:GOLEM_1_MINION_0}
 master={ffg:GOLEM_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationGolem2]
 ability={ffg:EFFECT_GOLEM_2}
 minion={ffg:GOLEM_2_MINION_0}
 master={ffg:GOLEM_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationGolem3]
 ability={ffg:EFFECT_GOLEM_3}
 minion={ffg:GOLEM_3_MINION_0}
 master={ffg:GOLEM_3_MASTER_0}
+masterfirst=true
 
 ; fixme minion first?
 [MonsterActivationKobold1]
