--- a/content/D2E/ck/wod/monsters.ini
+++ b/content/D2E/ck/wod/monsters.ini
@@ -3,8 +3,7 @@
 image="../../ffg/img/Monster_Golem.dds"
 info={ffg:INSTRUCTION_GOLEM}
 traits=melee mountain building huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterKobold]
 ; name=""
