--- a/content/D2E/h&m/cotf/activations.ini
+++ b/content/D2E/h&m/cotf/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationGolem1]
 ability={ffg:EFFECT_GOLEM_1}
 minion={ffg:GOLEM_1_MINION_0}
 master={ffg:GOLEM_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationGolem2]
 ability={ffg:EFFECT_GOLEM_2}
 minion={ffg:GOLEM_2_MINION_0}
 master={ffg:GOLEM_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationGolem3]
 ability={ffg:EFFECT_GOLEM_3}
 minion={ffg:GOLEM_3_MINION_0}
 master={ffg:GOLEM_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationMedusa1]
 ability={ffg:EFFECT_MEDUSA_1}
@@ -34,20 +34,20 @@ minion={ffg:MEDUSA_3_MINION_0}
 master={ffg:MEDUSA_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationSorcerer1]
 ability={ffg:EFFECT_SORCERER_1}
 minion={ffg:SORCERER_1_MINION_0}
 master={ffg:SORCERER_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationSorcerer2]
 ability={ffg:EFFECT_SORCERER_2}
 minion={ffg:SORCERER_2_MINION_0}
 master={ffg:SORCERER_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationSorcerer3]
 ability={ffg:EFFECT_SORCERER_3}
 minion={ffg:SORCERER_3_MINION_0}
 master={ffg:SORCERER_3_MASTER_0}
+masterfirst=true
