--- a/content/MoM/base/tokens.ini
+++ b/content/MoM/base/tokens.ini
@@ -214,3 +214,101 @@ x=758
 y=130
 height=130
 width=130
+
+[TokenRichardBechman]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=130
+y=780
+height=130
+width=130
+
+[TokenMildredBechman]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=260
+y=780
+height=130
+width=130
+
+[TokenAgentCraven]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=520
+y=780
+height=130
+width=130
+
+[TokenHowardBechman]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=0
+y=638
+height=130
+width=130
+
+[TokenGraceBechman]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=260
+y=650
+height=130
+width=130
+
+[TokenEugeneClemens]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=520
+y=650
+height=130
+width=130
+
+[TokenJoyceLittle]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=650
+y=650
+height=130
+width=130
+
+[TokenSylviaMarsh]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=0
+y=508
+height=130
+width=130
+
+[TokenZebulonWhateley]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=650
+y=520
+height=130
+width=130
+
+[TokenBobbyFoster]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=520
+y=390
+height=130
+width=130
+
+[TokenVictorBlake]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=0
+y=248
+height=130
+width=130
+
+[TokenZadocAllen]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=498
+y=130
+height=130
+width=130
+
+[TokenOtheraGilman]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=498
+y=0
+height=130
+width=130
+
+[TokenEdnaHughes]
+image="../ffg/img/SpriteAtlasTexture-ATLAS_FEATURES_CORE (Group 0)-1024x1024-fmt12.dds"
+x=628
+y=0
+height=130
+width=130
