Adding MAD09 character tokens.

--- a/content/MoM/base/tokens.ini
+++ b/content/MoM/base/tokens.ini
@@ -312,3 +312,15 @@ x=628
 y=0
 height=130
 width=130
+
+[TokenAmmiPierce]
+image="img/MAD09-allytoken-ammi.png"
+pps=200
+
+[TokenCorrinaJones]
+image="img/MAD09-allytoken-corrina.png"
+pps=200
+
+[TokenEricColt]
+image="img/MAD09-allytoken-eric.png"
+pps=200
