Improve activations: Kobold, Ferrox, Harpy.

--- a/content/D2E/h&m/botw/activations.ini
+++ b/content/D2E/h&m/botw/activations.ini
@@ -1,29 +1,29 @@
-; fixme minion first?
 [MonsterActivationKobold1]
 ability={ffg:EFFECT_KOBOLD_1}
 minion={ffg:KOBOLD_1_MINION_0}
 master={ffg:KOBOLD_1_MASTER_0}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationKobold2]
 ability={ffg:EFFECT_KOBOLD_2}
 minion={ffg:KOBOLD_2_MINION_0}
 master={ffg:KOBOLD_2_MASTER_0}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationKobold3]
 ability={ffg:EFFECT_KOBOLD_3}
 minion={ffg:KOBOLD_3_MINION_0}
 master={ffg:KOBOLD_3_MASTER_0}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationKobold4]
 ability={ffg:EFFECT_KOBOLD_4}
 minion={ffg:KOBOLD_4_MINION_0}
 master={ffg:KOBOLD_4_MASTER_0}
+minionfirst=true
 priority=1
 
 [MonsterActivationHellhound1]
