--- a/content/D2E/boxed/tt/activations.ini
+++ b/content/D2E/boxed/tt/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationHarpy1]
 ability={ffg:EFFECT_HARPY_1}
 minion={ffg:HARPY_1_MINION_0}
 master={ffg:HARPY_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationHarpy2]
 ability={ffg:EFFECT_HARPY_2}
 minion={ffg:HARPY_2_MINION_0}
 master={ffg:HARPY_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationHarpy3]
 ability={ffg:EFFECT_HARPY_3}
 minion={ffg:HARPY_3_MINION_0}
 master={ffg:HARPY_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationPlagueWorm1]
 ability={ffg:EFFECT_PLAGUE_WORM_1}
