--- a/content/D2E/boxed/tt/monsters.ini
+++ b/content/D2E/boxed/tt/monsters.ini
@@ -3,8 +3,7 @@
 image="../../ffg/img/Monster_Harpy.dds"
 info={ffg:INSTRUCTION_HARPY}
 traits=melee wilderness mountain small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterPlagueWorm]
 name="Plague Worm"
