--- a/content/D2E/ck/wod/activations.ini
+++ b/content/D2E/ck/wod/activations.ini
@@ -16,44 +16,44 @@ minion={ffg:GOLEM_3_MINION_0}
 master={ffg:GOLEM_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationKobold1]
 ability={ffg:EFFECT_KOBOLD_1}
 minion={ffg:KOBOLD_1_MINION_0}
 master={ffg:KOBOLD_1_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationKobold2]
 ability={ffg:EFFECT_KOBOLD_2}
 minion={ffg:KOBOLD_2_MINION_0}
 master={ffg:KOBOLD_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationKobold3]
 ability={ffg:EFFECT_KOBOLD_3}
 minion={ffg:KOBOLD_3_MINION_0}
 master={ffg:KOBOLD_3_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationKobold4]
 ability={ffg:EFFECT_KOBOLD_4}
 minion={ffg:KOBOLD_4_MINION_0}
 master={ffg:KOBOLD_4_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationFerrox1]
 ability={ffg:EFFECT_FERROX_1}
 minion={ffg:FERROX_1_MINION_0}
 master="∞ Attack the adjacent hero with the lowest ∂.\n∞ Use ""Leech"" on the adjacent hero with the lowest ∂.\n∞ Engage the hero within 5 spaces of this monster with the lowest ∂.\n∞ Engage the closest hero."
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationFerrox2]
 ability={ffg:EFFECT_FERROX_2}
 minion={ffg:FERROX_2_MINION_0}
 master="∞ Attack the adjacent hero with the lowest ∂.\n∞ Use ""Leech"" on the adjacent hero with the lowest ∂.\n∞ Engage the hero within 5 spaces of this monster with the lowest ∂.\n∞ Engage the closest hero."
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationFerrox3]
 ability={ffg:EFFECT_FERROX_3}
 minion={ffg:FERROX_3_MINION_0}
 master="∞ Attack the adjacent hero with the highest ∑.\n∞ Use ""Leech"" on the adjacent hero with the highest ∑.\n∞ Engage the hero within 5 spaces of this monster with the highest ∑.\n∞ Engage the closest hero."
+masterfirst=true
