--- a/content/D2E/ck/wod/monsters.ini
+++ b/content/D2E/ck/wod/monsters.ini
@@ -10,13 +10,10 @@ activation=Brawler1 Brawler2 Brawler3
 image="../../ffg/img/Monster_Kobold.dds"
 info="Kobolds spend ± in the following order: \n ±: Swarm \n\nSplit: Place the minion Kobolds in adjacent spaces that are closest to the closest hero."
 traits=melee cave building small
-; fixme unknown?
-;activation=Range1 Range2 Range3
 
 [MonsterFerrox]
 ; name=""
 image="../../ffg/img/Monster_Ferrox.dds"
 info={ffg:INSTRUCTION_FERROX}
 traits=melee cave water small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
