--- a/content/D2E/h&m/sots/activations.ini
+++ b/content/D2E/h&m/sots/activations.ini
@@ -1,22 +1,22 @@
-; fixme minion first?
 [MonsterActivationFerrox1]
 ability={ffg:EFFECT_FERROX_1}
 minion={ffg:FERROX_1_MINION_0}
 master={ffg:FERROX_1_MASTER_0}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationFerrox2]
 ability={ffg:EFFECT_FERROX_2}
 minion={ffg:FERROX_2_MINION_0}
 master={ffg:FERROX_2_MASTER_0}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationFerrox3]
 ability={ffg:EFFECT_FERROX_3}
 minion={ffg:FERROX_3_MINION_0}
 master={ffg:FERROX_3_MASTER_0}
+masterfirst=true
 priority=1
 
 [MonsterActivationBloodApe1]
