--- a/content/D2E/h&m/sots/monsters.ini
+++ b/content/D2E/h&m/sots/monsters.ini
@@ -3,8 +3,7 @@
 image="../../ffg/img/Monster_Ferrox.dds"
 info={ffg:INSTRUCTION_FERROX}
 traits=melee cave water small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
 
 [MonsterBloodApe]
