Activations: Deep Elf, Dark Minotaur, Changeling.

--- a/content/D2E/boxed/lor/activations.ini
+++ b/content/D2E/boxed/lor/activations.ini
@@ -70,8 +70,8 @@ minion={ffg:ARACHYURA_3_MINION_0}
 master={ffg:ARACHYURA_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationChangeling3]
 ability={ffg:EFFECT_CHANGELING_3}
 minion={ffg:CHANGELING_3_MINION_0}
 master={ffg:CHANGELING_3_MASTER_0}
+minionfirst=true
