--- a/content/D2E/boxed/son/activations.ini
+++ b/content/D2E/boxed/son/activations.ini
@@ -16,17 +16,17 @@ minion={ffg:RAT_SWARM_3_MINION_0}
 master={ffg:RAT_SWARM_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationChangeling1]
 ability={ffg:EFFECT_CHANGELING_1}
 minion={ffg:CHANGELING_1_MINION_0}
 master={ffg:CHANGELING_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationChangeling2]
 ability={ffg:EFFECT_CHANGELING_2}
 minion={ffg:CHANGELING_2_MINION_0}
 master={ffg:CHANGELING_2_MASTER_0}
+masterfirst=true
 
 [MonsterActivationIronbound1]
 ability={ffg:EFFECT_IRONBOUND_1}
