--- a/content/D2E/boxed/son/monsters.ini
+++ b/content/D2E/boxed/son/monsters.ini
@@ -11,8 +11,7 @@ imageplace="../../ffg/img/Monster_RatSwarm_Placement.dds"
 image="../../ffg/img/Monster_Changeling.dds"
 info={ffg:INSTRUCTION_CHANGELING}
 traits=melee civilized cursed small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterIronbound]
 ; name=""
