--- a/content/D2E/ck/aod/monsters.ini
+++ b/content/D2E/ck/aod/monsters.ini
@@ -25,8 +25,7 @@ activation=Brawler1 Brawler2 Brawler3
 image="../../ffg/img/Monster_DeepElf.dds"
 info={ffg:INSTRUCTION_DEEP_ELF}
 traits=melee dark cave small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 
 [MonsterBloodApe]
 name="Blood Ape"
