--- a/content/D2E/h&m/botw/activations.ini
+++ b/content/D2E/h&m/botw/activations.ini
@@ -44,20 +44,20 @@ minion={ffg:HELLHOUND_3_MINION_0}
 master={ffg:HELLHOUND_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationDeepElf1]
 ability={ffg:EFFECT_DEEP_ELF_1}
 minion={ffg:DEEP_ELF_1_MINION_0}
 master={ffg:DEEP_ELF_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationDeepElf2]
 ability={ffg:EFFECT_DEEP_ELF_2}
 minion={ffg:DEEP_ELF_2_MINION_0}
 master={ffg:DEEP_ELF_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationDeepElf3]
 ability={ffg:EFFECT_DEEP_ELF_3}
 minion={ffg:DEEP_ELF_3_MINION_0}
 master={ffg:DEEP_ELF_3_MASTER_0}
+masterfirst=true
