--- a/content/D2E/h&m/soe/monsters.ini
+++ b/content/D2E/h&m/soe/monsters.ini
@@ -13,8 +13,7 @@ name="Dark Minotaur"
 image="../../ffg/img/Monster_DarkMinotaur.dds"
 info={ffg:DARK_MINOTAUR_INSTRUCTION}
 traits=melee cursed civilized small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
 priority=1
 
 [MonsterShade]
