--- a/content/D2E/ck/aod/activations.ini
+++ b/content/D2E/ck/aod/activations.ini
@@ -52,23 +52,23 @@ minion={ffg:TROLL_3_MINION_0}
 master={ffg:TROLL_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationDeepElf1]
 ability={ffg:EFFECT_DEEP_ELF_1}
 minion={ffg:DEEP_ELF_1_MINION_0}
 master={ffg:DEEP_ELF_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationDeepElf2]
 ability={ffg:EFFECT_DEEP_ELF_2}
 minion={ffg:DEEP_ELF_2_MINION_0}
 master={ffg:DEEP_ELF_2_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationDeepElf3]
 ability={ffg:EFFECT_DEEP_ELF_3}
 minion={ffg:DEEP_ELF_3_MINION_0}
 master={ffg:DEEP_ELF_3_MASTER_0}
+masterfirst=true
 
 [MonsterActivationBloodApe1]
 ability={ffg:EFFECT_BLOOD_APE_1}
