--- a/content/D2E/h&m/botw/monsters.ini
+++ b/content/D2E/h&m/botw/monsters.ini
@@ -18,5 +18,4 @@ priority=1
 image="../../ffg/img/Monster_DeepElf.dds"
 info={ffg:INSTRUCTION_DEEP_ELF}
 traits=melee dark cave small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Brawler1 Brawler2 Brawler3
