--- a/content/D2E/h&m/soe/activations.ini
+++ b/content/D2E/h&m/soe/activations.ini
@@ -19,25 +19,25 @@ minion={ffg:ICE_WYRM_3_MINION_0}
 master={ffg:ICE_WYRM_3_MASTER_0}
 priority=1
 
-; fixme minion first?
 [MonsterActivationDarkMinotaur1]
 ability={ffg:EFFECT_DARK_MINOTAUR_1}
 minion={ffg:DARK_MINOTAUR_1_MINION}
 master={ffg:DARK_MINOTAUR_1_MASTER}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationDarkMinotaur2]
 ability={ffg:EFFECT_DARK_MINOTAUR_2}
 minion={ffg:DARK_MINOTAUR_2_MINION}
 master={ffg:DARK_MINOTAUR_2_MASTER}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationDarkMinotaur3]
 ability={ffg:EFFECT_DARK_MINOTAUR_3}
 minion={ffg:DARK_MINOTAUR_3_MINION}
 master={ffg:DARK_MINOTAUR_3_MASTER}
+minionfirst=true
 priority=1
 
 [MonsterActivationShade1]
