Chaos Beasts, Goblin Witcher, Ogre

--- a/content/D2E/boxed/lor/activations.ini
+++ b/content/D2E/boxed/lor/activations.ini
@@ -1,20 +1,20 @@
-; fixme minion first?
 [MonsterActivationGoblinWitcher1]
 ability={ffg:EFFECT_GOBLIN_WITCHER_1}
 minion={ffg:GOBLIN_WITCHER_1_MINION_0}
 master={ffg:GOBLIN_WITCHER_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationGoblinWitcher2]
 ability={ffg:EFFECT_GOBLIN_WITCHER_2}
 minion={ffg:GOBLIN_WITCHER_2_MINION_0}
 master={ffg:GOBLIN_WITCHER_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationGoblinWitcher3]
 ability={ffg:EFFECT_GOBLIN_WITCHER_3}
 minion={ffg:GOBLIN_WITCHER_3_MINION_0}
 master={ffg:GOBLIN_WITCHER_3_MASTER_0}
+minionfirst=true
 
 [MonsterActivationVolucrixReaver1]
 ability={ffg:EFFECT_VOLUCRIX_REAVER_1}
