--- a/content/D2E/ck/aod/monsters.ini
+++ b/content/D2E/ck/aod/monsters.ini
@@ -3,8 +3,7 @@ name="Chaos Beast"
 image="../../ffg/img/Monster_ChaosBeast.dds"
 info={ffg:INSTRUCTION_CHAOS_BEAST}
 traits=ranged dark cursed huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterDarkPriest]
 name="Dark Priest"
