--- a/content/D2E/ck/d1e/activations.ini
+++ b/content/D2E/ck/d1e/activations.ini
@@ -124,23 +124,23 @@ minion={ffg:MANTICORE_3_MINION_0}
 master={ffg:MANTICORE_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationOgre1]
 ability="Each Ogre immediately recovers 1 ≥."
 minion={ffg:OGRE_1_MINION_0}
 master={ffg:OGRE_1_MINION_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationOgre2]
 ability="Each attack performed by an Ogre gains 1 ±."
 minion={ffg:OGRE_2_MINION_0}
 master={ffg:OGRE_2_MINION_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationOgre3]
 ability="Each hero in line of sight of an Ogre immediately tests π, adding 1 ≤ to the results. Each hero who fails suffers ∏ equal to the number of ≤ rolled in excess of his π."
 minion={ffg:OGRE_3_MINION_0}
 master={ffg:OGRE_3_MINION_0}
+masterfirst=true
 
 [MonsterActivationHellhound1]
 ability={ffg:EFFECT_HELLHOUND_1}
