--- a/content/D2E/ck/d1e/monsters.ini
+++ b/content/D2E/ck/d1e/monsters.ini
@@ -54,8 +54,7 @@ activation=Range1 Range2 Range3
 image="../../ffg/img/Monster_Ogre.dds"
 info={ffg:INSTRUCTION_OGRE}
 traits=melee building cave huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 
 [MonsterHellhound]
 ; name=""
