--- a/content/D2E/boxed/lor/monsters.ini
+++ b/content/D2E/boxed/lor/monsters.ini
@@ -3,8 +3,7 @@ name="Goblin Witcher"
 image="../../ffg/img/Monster_GoblinWitcher.dds"
 info={ffg:INSTRUCTION_GOBLIN_WITCHER}
 traits=ranged building cursed small
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterVolucrixReaver]
 name="Volucrix Reaver"
