--- a/content/D2E/h&m/cod/activations.ini
+++ b/content/D2E/h&m/cod/activations.ini
@@ -34,20 +34,20 @@ minion={ffg:GIANT_3_MINION_0}
 master={ffg:GIANT_3_MASTER_0}
 minionfirst=true
 
-; fixme minion first?
 [MonsterActivationChaosBeast1]
 ability={ffg:EFFECT_CHAOS_BEAST_1}
 minion={ffg:CHAOS_BEAST_1_MINION_0}
 master={ffg:CHAOS_BEAST_1_MASTER_0}
+masterfirst=true
 
-; fixme minion first?
 [MonsterActivationChaosBeast2]
 ability={ffg:EFFECT_CHAOS_BEAST_2}
 minion={ffg:CHAOS_BEAST_2_MINION_0}
 master={ffg:CHAOS_BEAST_2_MASTER_0}
+minionfirst=true
 
-; fixme minion first?
 [MonsterActivationChaosBeast3]
 ability={ffg:EFFECT_CHAOS_BEAST_3}
 minion={ffg:CHAOS_BEAST_3_MINION_0}
 master={ffg:CHAOS_BEAST_3_MASTER_0}
+masterfirst=true
