--- a/content/D2E/h&m/cod/monsters.ini
+++ b/content/D2E/h&m/cod/monsters.ini
@@ -10,8 +10,7 @@ name="Chaos Beast"
 image="../../ffg/img/Monster_ChaosBeast.dds"
 info={ffg:INSTRUCTION_CHAOS_BEAST}
 traits=ranged dark cursed huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Range1 Range2 Range3
 
 [MonsterLavaBeetle]
 name="Lava Beetle"
