--- a/content/D2E/h&m/vod/activations.ini
+++ b/content/D2E/h&m/vod/activations.ini
@@ -16,25 +16,25 @@ minion={ffg:MANTICORE_3_MINION_0}
 master={ffg:MANTICORE_3_MASTER_0}
 masterfirst=true
 
-; fixme minion first?
 [MonsterActivationOgre1]
 ability={ffg:EFFECT_OGRE_1}
 minion={ffg:OGRE_1_MINION_0}
 master={ffg:OGRE_1_MASTER_0}
+minionfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationOgre2]
 ability={ffg:EFFECT_OGRE_2}
 minion={ffg:OGRE_2_MINION_0}
 master={ffg:OGRE_2_MASTER_0}
+masterfirst=true
 priority=1
 
-; fixme minion first?
 [MonsterActivationOgre3]
 ability={ffg:EFFECT_OGRE_3}
 minion={ffg:OGRE_3_MINION_0}
 master={ffg:OGRE_3_MASTER_0}
+masterfirst=true
 priority=1
 
 [MonsterActivationTroll1]
