--- a/content/D2E/h&m/vod/monsters.ini
+++ b/content/D2E/h&m/vod/monsters.ini
@@ -12,8 +12,7 @@ priority=1
 image="../../ffg/img/Monster_Ogre.dds"
 info={ffg:INSTRUCTION_OGRE}
 traits=melee building cave huge
-; fixme unknown?
-;activation=Range1 Range2 Range3
+activation=Skirmisher1 Skirmisher2 Skirmisher3
 priority=1
 
 [MonsterTroll]
