--- a/content/D2E/lt/serena/content_pack.ini
+++ b/content/D2E/lt/serena/content_pack.ini
@@ -9,3 +9,32 @@ type=lt
 image="../../ffg/img/Hero_Serena.dds"
 archetype=healer
 traits=female
+
+[MonsterAgentSerena]
+image="../../ffg/img/Lieutenant_Serena.dds"
+info={ffg:SERENA_INFO}
+traits=agent small
+
+[MonsterActivationAgentSerena1]
+ability={ffg:SERERA_1_EFFECT}
+master={ffg:SERENA_1_0}
+
+[MonsterActivationAgentSerena2]
+ability={ffg:SERERA_2_EFFECT}
+master={ffg:SERENA_2_0}
+
+[MonsterActivationAgentSerena3]
+ability={ffg:SERERA_3_EFFECT}
+master={ffg:SERENA_3_0}
+
+[MonsterActivationAgentSerena4]
+ability={ffg:SERERA_4_EFFECT}
+master={ffg:SERENA_4_0}
+
+[MonsterActivationAgentSerena5]
+ability={ffg:SERERA_5_EFFECT}
+master={ffg:SERENA_5_0}
+
+[MonsterActivationAgentSerena6]
+ability={ffg:SERERA_6_EFFECT}
+master={ffg:SERENA_6_0}
