--- a/content/D2E/lt/bolgoreth/content_pack.ini
+++ b/content/D2E/lt/bolgoreth/content_pack.ini
@@ -1,7 +1,7 @@
 [ContentPack]
 name=Bol'Goreth Lieutenant Pack
 description=Bol'Goreth Lieutenant Pack for Descent: Journeys in the Dark Second Edition
-image="../../ffg/img/DJ20_Bol'Goreth.dds"
+image="../../ffg/img/DJ20_BolGoreth.dds"
 id=DJ20
 type=lt
 
