Adding libraries.  NOTE:  Default .gitignore needs to have .dll removed if working on the libraries project.

--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -9,7 +9,7 @@ traits=small humanoid
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
 
 [MonsterDeepOne]
 ; Optional name for display (if spaces or other formatting required)
@@ -20,7 +20,7 @@ image="../ffg/img/Monster_Deep_One.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=1
 traits=humanoid
 
 [MonsterDeepOneHybrid]
@@ -56,7 +56,7 @@ image="../ffg/img/Monster_Hunting_Horror.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=3
 traits=beast
 
 [MonsterRiot]
