--- a/content/MoM/mom1e/monsters.ini
+++ b/content/MoM/mom1e/monsters.ini
@@ -32,7 +32,7 @@ image="../ffg/img/Monster_Hound_Of_Tindalos.dds"
 ; priority=0
 ; activation=
 ; Optional health modifier from number of players
-; health=0
+health=3
 traits=beast
 
 [MonsterManiac]
